--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
         <div class="wave-background"></div>
-        <h3>Welcome to My Power BI Projects</h3>
+        <h3>My PowerBI Projects</h3>
     </header>
 
     <!-- Navbar Section -->
